# wordle-ripoff

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  main.c
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  protect-main.yml
include/: cell.h
src/: cell.c  main.c
